--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </main>
     <footer>
         <p class="footer-texto">&copy; 2025 Todos los derechos reservados</p>
-        <button class="github-boton">Ver en Github</button>
+        <a class="github-boton" target="_blank" href="https://github.com/Leandro-Ezequiel-Rial/parcial-leandro-rial">Ver en Github</a>
     </footer>
     <script src="js/scripts.js"></script>
 </body>
