--- a/contacto.html
+++ b/contacto.html
@@ -18,17 +18,17 @@
     <main>
         <div class="navegacion-contenedor">
             <div class="contenedor-imagen">
-                <img src="/imagen/imagen-foto.JPG" alt="Imagen de perfil">
+                <img src="imagen-foto.JPG" alt="Imagen de perfil">
             </div>
             <div class="nombre-y-navegacion">
                 <h2 class="nombre">Leandro Ezequiel Rial</h2>
                 <div class="navegacion-caja">
                     <nav class="navegacion">
                         <ul>
-                            <li><a href="/index.html">HOME</a></li>
+                            <li><a href="/parcial-leandro-rial/index.html">HOME</a></li>
                             <li><a href="https://github.com/Leandro-Ezequiel-Rial/look-local-comercial-viernes" target="_blank">Local Comercial</a></li>
                             <li><a href="https://github.com/Leandro-Ezequiel-Rial/actividad-fanpage-viernes" target="_blank">Fan Page</a></li>
-                            <li><a href="/contacto.html">Contacto</a></li>
+                            <li><a href="/parcial-leandro-rial/contacto.html">Contacto</a></li>
                         </ul>
                     </nav>
                 </div>
