--- a/contacto.html
+++ b/contacto.html
@@ -18,7 +18,7 @@
     <main>
         <div class="navegacion-contenedor">
             <div class="contenedor-imagen">
-                <img src="imagen/imagen-foto.JPG" alt="Imagen de perfil">
+                <img src="./imagen/imagen-foto.JPG" alt="Imagen de perfil">
             </div>
             <div class="nombre-y-navegacion">
                 <h2 class="nombre">Leandro Ezequiel Rial</h2>
